# python-ipfabric

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  pytest.ini  req.txt  requirements.txt  sample.env  scripts.py
.github/: slack-release.yml
.github/workflows/: build_docs.yml  ci.yml  main.yml  release.yml  slack-notification.yml  slack-release.yml
docs/: index.md  pyproject.toml
docs/Getting_Started/: Getting_Started.md  getting_started.md
docs/References/: API.md  Client.md  Settings.md  intent.md  reference.md
docs/Use_cases/: use_cases.md
examples/: attribute_filter.py  basic.py  config.py  copying_snapshots.py  credentials.py  cve_check.py  graphs.py  intent.py  intent_reports.py  inventory.py  logging_example.py  logging_file_example.py  security.py  site_updates.csv  sitename_updates.py  snapshots.py
examples/logging/: README.md  logg_debug.py  logg_file_rotation.py  logg_json.py
examples/rbac/: README.md  main.py  policies.yaml  requirements.txt  roles.yaml
examples/settings/: api_tokens.py  attributes.csv  attributes.py  credentials.py  discovery.py  local_attributes.py  seeds.py  sites.csv  user_management.py  vendor_api.py
examples/tools/: builtin_checks.py  config.py  cve_check.py  discovery.py  restore_intents.py  shared_tools.py  site_separation_report.py  sitename_updates.py
ipfabric/: __init__.py  api.py  client.py  graphs.py  intent.py  intent_models.py  logg.py  models.py  security.py  settings.py  snapshot_models.py
ipfabric/pathlookup/: __init__.py  diagrams.py  diagramsV4_3.py  graphs.py  icmp.py
ipfabric/settings/: __init__.py  api_tokens.py  attributes.py  authentication.py  discovery.py  seeds.py  site_separation.py  user_mgmt.py  users.py  vendor_api.py  vendor_api_models.py
ipfabric/technology/: __init__.py  addressing.py  cloud.py  dhcp.py  fhrp.py  interfaces.py  ip_telephony.py  load_balancing.py  managed_networks.py  management.py  managment.py  manged_networks.py  mpls.py  mulitcasting.py  multicast.py  neighbors.py  oam.py  platforms.py  port_channels.py  qos.py  routing.py  sdn.py  sdwan.py  security.py  stp.py  vlans.py  wireless.py
ipfabric/tools/: __init__.py  builtin_checks.py  configuration.py  discovery.py  discovery_history.py  helpers.py  logg.py  nist.py  restore_intents.py  shared.py  site_seperation_report.py  sites.py  snapshot.py  table_diff.py  update_device_site.py  vulnerabilities.py
ipfabric/tools/factory_defaults/v4/4/: groups.json  intents.json
ipfabric/tools/factory_defaults/v5/0/: intents.json
ipfabric/tools/factory_defaults/v6/0/: dashboard.json  groups.json  intents.json
src/ipfabric/: __init__.py  graphs.py  models.py
src/tests/: test_client.py  test_models.py
tests/: __init__.py  test_client.py  test_graphs.py  test_intent.py  test_intent_models.py  test_models.py  test_security.py
tests/functional/: test_client.py  test_graphs.py  test_intent.py  test_security.py
tests/settings/: test_api_tokens.py  test_authentication.py  test_seeds.py  test_users.py
tests/tools/: test_configuration.py  test_nist.py  test_sites.py
tests/unittests/: test_client.py  test_graphs.py  test_intent.py  test_intent_models.py  test_models.py  test_security.py  test_snapshot_models.py
tests/unittests/pathlookup/: test_diagrams.py  test_diagramsV4_3.py  test_graphs.py
tests/unittests/settings/: test_api_tokens.py  test_attributes.py  test_authentication.py  test_seeds.py  test_site_separation.py  test_users.py  test_vendor_api.py
tests/unittests/tools/: test_builtin_checks.py  test_configuration.py  test_discovery.py  test_helpers.py  test_nist.py  test_sites.py  test_vulnerabilities.py
