[tool.poetry]
name = "python-ipfabric-docs"
version = "0.1.0"
description = "docs environment for python-ipfabric docs website"
authors = ["Cristian Cordero <cristian.cordero@ipfabric.io>"]
license = "MIT"
readme = "README.md"
packages = [{include = "python_ipfabric_docs"}]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.11"
mkdocs-material-extensions = "^1.1.1"
pymdown-extensions = "^9.9"
mdx-truly-sane-lists = "^1.3"
pillow = "^9.3.0"
cairosvg = "^2.5.2"
mkdocstrings-python = "^0.8.2"
ipfabric = "^6.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
